--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -3,7 +3,7 @@
 
 # Автозапуск приложений
 exec-once = waybar & hyprpaper & dunst
-
+exec-once = /run/current-system/sw/libexec/polkit-gnome-authentication-agent-1
 # НАСТРОЙКИ МОНИТОРОВ
 # Монитор 1: Acer XF253Q (1080p@240Hz) - основной слева
 monitor=DP-2,1920x1080@239.76,0x0,1
